Added admin panel

--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "alphabitrage",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "ReveinOff",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
